--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 
         <h1>Contact</h1>
         <div class="social">
-               <a href="https://www.facebook.com/imajayg" target="_blank"><img class="social-icon" src="images/facebook.png" alt="facebook"></a> 
-               <a href="https://www.instagram.com/imajayg/" target="_blank"><img class="social-icon" src="images/instagram.jpg" alt="facebook"></a>
-               <a href="https://twitter.com/i/flow/login" target="_blank"><img class="social-icon" src="images/twitter.png" alt="facebook"></a>
-               <a href="https://www.linkedin.com/in/imajayg/" target="_blank"><img class="social-icon" src="images/linkedin.png" alt="facebook"></a>
+               <a href="https://www.facebook.com/imajayg" target="_blank"><img class="social-icon" src="facebook.png" alt="facebook"></a> 
+               <a href="https://www.instagram.com/imajayg/" target="_blank"><img class="social-icon" src="instagram.jpg" alt="facebook"></a>
+               <a href="https://twitter.com/i/flow/login" target="_blank"><img class="social-icon" src="twitter.png" alt="facebook"></a>
+               <a href="https://www.linkedin.com/in/imajayg/" target="_blank"><img class="social-icon" src="linkedin.png" alt="facebook"></a>
 
 
         </div>
